fix(messages): increase contrast
Remove background color to increase contrast on messages

--- a/src/platform/core/message/_message-theme.scss
+++ b/src/platform/core/message/_message-theme.scss
@@ -26,15 +26,12 @@
   .td-message {
     &.mat-primary {
       color: mat-color($primary);
-      background-color: mat-color($primary, 0.15);
     }
     &.mat-accent {
       color: mat-color($accent);
-      background-color: mat-color($accent, 0.15);
     }
     &.mat-warn {
       color: mat-color($warn);
-      background-color: mat-color($warn, 0.15);
     }
   }
 }
